# my-playground

./: .gitignore
Game_Development/GLFW_Game_Development/: CMakeLists.txt
Game_Development/SDL_Game_Development/: CMakeLists.txt
Game_Development/SDL_Game_Development/src/: main.cpp
Game_Development/SFML_Game_Development/: CMakeLists.txt  build.bat  build.sh  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh
Game_Development/SFML_Game_Development/examples/: CMakeLists.txt  graphics_tutorial.cpp  hello.cpp  window_tutorial.cpp
Game_Development/SFML_Game_Development/src/: CMakeLists.txt  main.cpp
Game_Development/SFML_Game_Development/src/Chapter01/: CMakeLists.txt  Chapter01.cpp
Game_Development/SFML_Game_Development/src/Chapter01/include/: Game.hpp
Game_Development/SFML_Game_Development/src/Chapter02/: CMakeLists.txt  Chapter02.cpp  Game.cpp  ResourceHolder.cpp  ResourceManager.cpp
Game_Development/SFML_Game_Development/src/Chapter02/include/: ResourceHolder.hpp  ResourceManager.hpp
Game_Development/SFML_Game_Development/src/Chapter03/: CMakeLists.txt  Entity.cpp  Game.cpp  ResourceManager.cpp  SceneNode.cpp
Game_Development/SFML_Game_Development/src/Chapter03/include/: Entity.hpp  Game.hpp  ResourceHolder.hpp  ResourceManager.hpp  SceneNode.hpp
PromiseUsage/: CMakeLists.txt  main.cpp  vcpkg.json
PromiseUsage/include/ash/: Future.hpp  Future.ipp  Module.cpp  Module.hpp  Promise.hpp  Promise.ipp  SharedState.hpp  SharedState.ipp  SyncCircularBuffer.hpp  SyncCircularBuffer.ipp
aaai2019_wordfreq/: aaai2019.html  wordfreq.py
avx_sse/: Makefile  test.cpp  test_load.cpp
binary_encoding/: binary_encoding.cpp
categorical-estimation/: cat-estimation.py
combinadic/: Makefile  combinadic.cpp
cpp_plugins/: Makefile  hello_world.cpp  plugin.hpp  test_dlopen.cpp
django-tutorial/: .gitignore
django-tutorial/django_tutorial/django_tutorial/: settings.py  urls.py
django-tutorial/django_tutorial/polls/: admin.py  models.py  tests.py  urls.py  views.py
django-tutorial/django_tutorial/polls/migrations/: 0001_initial.py  0002_choice_choice_text.py
django-tutorial/django_tutorial/polls/static/polls/: style.css
django-tutorial/django_tutorial/polls/templates/polls/: detail.html  index.html
easy-sum/: main.py
expressions/: expressions.cpp
falling_sand/: Makefile  demo.cpp
figure_8/: figure_8.py
floodfill_bits/: Makefile  floodfill_bits.cpp
floyd_warshal/: floyd.cpp
floyd_warshal/maps/: all.txt
fltk/: CMakeLists.txt
fltk/include/: game_gui.hpp
fltk/src/: .board.cpp.swp  CMakeLists.txt  board.cpp  game_gui.cpp  game_gui_test.cpp  hello.cpp  pack.cpp  resize.cpp
gnuplot/GnuplotInAction/datasets/: mydata
graph-kernel/: demo.py
hashtable_c/: Makefile  hashtable.c
hierarchical_clustering/: Makefile  hc.cpp
io_multiplexing/: Makefile  io_multiplexing.c
js_canvas/: index.html  index.js
levenshtein/: Makefile  levenshtein.cpp
lightweight_future/: Makefile  main.cpp
multimethods/: Makefile  main.cpp
my-any/: any.hpp
numeric_center/: Makefile  numeric_center.cpp
perfect_square/: Makefile  main.cpp
pi_random/: pi_random.py
python_pipes/: client_python2.py  server_python3.py
python_utf16/: amicable.txt  chuck.txt  encode.py  input.txt  narcissistic.txt  reverse.txt  thor.txt
qt/: Makefile  qt.pro  simple.cpp  version.cpp
stack_backtracking/: Makefile  main.cpp
static_plugin/: plugin.cpp  plugin.hpp  real_plugin.cpp  real_plugin.hpp  test.cpp
van-eck-sequence/: Makefile  van-eck.cpp  van-eck.csv  van-eck.ods
visitation_pattern/: visitor.cpp  visitor_with_return_value.cpp
wasm-hello-world/: a.out.js  hw.cpp
z3pg/: asdf.smt  simple_blocks_world.py
