cmake_minimum_required(VERSION 3.25)
project(CMakeSFMLProject LANGUAGES CXX)

#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
	set(EXAMPLES_OUTPUT_DIR ${CMAKE_SOURCE_DIR}/bin-debug/examples)
	set(APPLICATIONS_OUTPUT_DIR ${CMAKE_SOURCE_DIR}/bin-debug)
else()
	set(EXAMPLES_OUTPUT_DIR ${CMAKE_SOURCE_DIR}/bin/examples)
	set(APPLICATIONS_OUTPUT_DIR ${CMAKE_SOURCE_DIR}/bin)
endif()

file(MAKE_DIRECTORY ${EXAMPLES_OUTPUT_DIR})
file(MAKE_DIRECTORY ${APPLICATIONS_OUTPUT_DIR})

include(FetchContent)
FetchContent_Declare(SFML
    GIT_REPOSITORY https://github.com/SFML/SFML.git
    GIT_TAG 3.0.0
    GIT_SHALLOW ON
    EXCLUDE_FROM_ALL
    SYSTEM)
if (NOT SFML_POPULATED)
    set(FETCHCONTENT_QUIET NO)
    FetchContent_MakeAvailable(SFML)
endif()

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(src)
add_subdirectory(examples)
