cmake_minimum_required(VERSION 3.25)
project(CMakeSFMLProject LANGUAGES CXX)

#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)

set(EXAMPLES_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin/examples)
set(APPLICATIONS_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin)
set(EXAMPLES_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin-debug/examples)
set(APPLICATIONS_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin-debug)

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
        set(EXAMPLES_OUTPUT_DIRECTORY ${EXAMPLES_OUTPUT_DIRECTORY_DEBUG})
        set(APPLICATIONS_OUTPUT_DIRECTORY ${APPLICATIONS_OUTPUT_DIRECTORY_DEBUG})
else()
    set(EXAMPLES_OUTPUT_DIRECTORY ${EXAMPLES_OUTPUT_DIRECTORY_RELEASE})
    set(APPLICATIONS_OUTPUT_DIRECTORY ${APPLICATIONS_OUTPUT_DIRECTORY_RELEASE})
endif()

file(MAKE_DIRECTORY ${EXAMPLES_OUTPUT_DIRECTORY})
file(MAKE_DIRECTORY ${APPLICATIONS_OUTPUT_DIRECTORY})

include(FetchContent)
FetchContent_Declare(SFML
    GIT_REPOSITORY https://github.com/SFML/SFML.git
    GIT_TAG 3.0.0
    GIT_SHALLOW ON
    EXCLUDE_FROM_ALL
    SYSTEM)
if (NOT SFML_POPULATED)
    set(FETCHCONTENT_QUIET NO)
    FetchContent_MakeAvailable(SFML)
endif()

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(src)
add_subdirectory(examples)
